<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/nav_exercises" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_workouts" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_progress" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu> 